--- a/style.css
+++ b/style.css
@@ -8,35 +8,36 @@
 	}
 	.form {
 		box-sizing: border-box;
-		box-shadow: 3px 39px 34px black;
-		min-height: 300px;
-		border: 1px solid black;
-		background-image: linear-gradient(45deg, yellow, white);
+        min-height: 300px;
+        margin: 57px 0 0 60px;
+		border:1px solid black;
+		background-color: #cfd7df;
 	}
 	.form-input {
 		height: 40px;
 		margin: 15px 0 0 0px;
-		border: 1px solid black;
 		padding: 12px;
 		/* max-width: 80%; */
 		min-width: 100px;
 	}
 	.inputColumn {
-		font-size: 20px;
-		font-family: ui-sans-serif;
+		font-size: 12px;
+        font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 	}
 	.valueColumn {
-		float: right;
-		display: block;
-		margin: 0px 0 0px 0px;
-		border-radius: 4px;
-		padding: 0px;
-		height: 36px;
-		max-width: 378px;
-		min-width: 272px;
+		/* background: #fff; */
+        border: none;
+        border: 1px solid #cfd7df;
+        border-radius: 4px;
+        font-size: 14px;
+        font-weight: 400;
+        padding: 1px 24px 1px 22px;
+        overflow-y: hidden;
+        min-height: 32px;
+        width: 89%;
 	}
 	.valueButtonColumn {
-		transform: translate(256px, 0px);
+		transform: translate(111px, 0px);
 		display: block;
 		margin: 0px 0 0px 0px;
 		border-radius: 4px;
@@ -47,10 +48,10 @@
 		position: absolute;
 	}
 	.inputRadioColumn {
-		margin: 0px 0 0 42px;
+		margin: 6px 0 0 20px;
 	}
 	.inputCheckBoxColumn {
-		margin: 0px 0 0 35px;
+		margin: 6px 0 0 20px;
 	}
   table,th,td {
     border: 1px solid black;
@@ -75,34 +76,36 @@
 	}
 	.form {
 		box-sizing: border-box;
-		box-shadow: 3px 39px 34px black;
-		min-height: 300px;
-		border: 1px solid black;
-		background-image: linear-gradient(45deg, yellow, white);
+        min-height: 300px;
+        margin: 57px 0 0 60px;
+		border:1px solid black;
+		background-color: #cfd7df;
 	}
 	.form-input {
 		height: 40px;
 		margin: 15px 0 0 0px;
-		border: 1px solid black;
 		padding: 12px;
 		/* max-width: 80%; */
 		min-width: 100px;
 	}
 	.inputColumn {
-		font-size: 20px;
-		font-family: ui-sans-serif;
+		font-size: 12px;
+        font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 	}
 	.valueColumn {
-		float: right;
-		display: block;
-		margin: 0px 0 0px 0px;
-		border-radius: 4px;
-		padding: 0px;
-		height: 36px;
-		width: 378px;
+		/* background: #fff; */
+        border: none;
+        border: 1px solid #cfd7df;
+        border-radius: 4px;
+        font-size: 14px;
+        font-weight: 400;
+        padding: 1px 24px 1px 29px;
+        overflow-y: hidden;
+        min-height: 32px;
+        width: 91%;
 	}
 	.valueButtonColumn {
-		transform: translate(256px, 0px);
+		transform: translate(111px, 0px);
 		display: block;
 		margin: 0px 0 0px 0px;
 		border-radius: 4px;
@@ -113,10 +116,10 @@
 		position: absolute;
 	}
 	.inputRadioColumn {
-		margin: 0px 0 0 42px;
+		margin: 6px 0 0 20px;
 	}
 	.inputCheckBoxColumn {
-		margin: 0px 0 0 35px;
+		margin: 6px 0 0 20px;
 	}
   table,th,td {
     border: 1px solid black;
